--- a/travel-website/views/common/navbar.html
+++ b/travel-website/views/common/navbar.html
@@ -33,7 +33,7 @@
             <a class="weibo-login" href="#" title="微博登录" rel="nofollow"></a>
             <a class="qq-login" href="#" title="QQ登录" rel="nofollow"></a>
             <a class="weixin-login" href="#" title="微信登录" rel="nofollow"></a>
-            <a id="_j_showlogin" title="登录狼行天下" href="/login.html" rel="nofollow">登录</a>
+            <a id="_j_showlogin" title="登录旅游网" href="/login.html" rel="nofollow">登录</a>
             <span class="split">|</span>
             <a href="/regist.html" title="注册帐号" rel="nofollow">注册</a>
         </div>
